TM-102 addressing PR feedback